feat(GRAN-64): Add new APi endpoints for fetching feature control information
